feat: added saga for registration flow, added exception handling, CORS and swagger configs, validation